# mathdoku-ocr-slides-generator

./: .gitignore  CLAUDE.md  cspell.json  eslint.config.mts  package.json  tsconfig.json  vite.config.app.ts
.claude/: settings.local.json
__tests__/: Puzzle.test.ts  SolutionYaml.test.ts  cageConstraints.test.ts  combinatorics.test.ts  parsers.test.ts  puzzleTestHelper.ts  typeGuards.test.ts
__tests__/strategies/: CageFishStrategy.test.ts  DeterminedByCageStrategy.test.ts  DoesNotDivideProductStrategy.test.ts  EliminateByOperationStrategy.test.ts  FishStrategy.test.ts  HiddenSetStrategy.test.ts  HiddenSingleStrategy.test.ts  InniesOutiesStrategy.test.ts  NakedSetStrategy.test.ts  NoCageCombinationStrategy.test.ts  RequiredCageCandidateStrategy.test.ts  SingleCandidateStrategy.test.ts  TooBigForProductStrategy.test.ts  TooBigForSumStrategy.test.ts  TooBigInProductStrategy.test.ts  TooBigInSumStrategy.test.ts  TooSmallForProductStrategy.test.ts  TooSmallForSumStrategy.test.ts  TooSmallInProductStrategy.test.ts  TooSmallInSumStrategy.test.ts  XWingStrategy.test.ts  (+1 more)
ocr-python/: ocr_mathdoku.py  pyproject.toml
ocr-python/ocr/: ocr_mathdoku.py
ocr-python/tests/: test_ocr.py
ocr-python/tests/fixtures/: Blog39.yaml  Blog40.yaml  Blog41.yaml  Blog42.yaml
scripts/: build.ts  compressMusic.ts  edit-solution.ts  export-html.ts  init-solution.ts  makeMathdokuSlides.ts  startSolver.ts
src/: Puzzle.ts  SolutionYaml.ts  SvgRenderer.ts  View.ts  cageConstraints.ts  combinatorics.ts  layoutProfiles.ts  main.ts  parsers.ts  puzzleYamlParser.ts  solutionCommand.ts
(+45 files in other folders)
