[project]
name = "mathdoku-ocr-slides-generator"
version = "0.2.0"
description = "OCR tool for Mathdoku puzzles"
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "numpy",
    "pytesseract",
    "pyyaml",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --durations=0"

[tool.hatch.scripts]
test = "pytest {args}"

[dependency-groups]
dev = [
    "pytest-sugar>=1.1.1",
]
